kubernetes/apps/prod/frigate/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate
  namespace: frigate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frigate
  template:
    metadata:
      labels:
        app: frigate
    spec:
      nodeSelector:
        feature.node.kubernetes.io/pci-0300_8086.present: "true"
      containers:
      - name: frigate
        image: ghcr.io/blakeblackshear/frigate:stable
        ports:
        - containerPort: 5000
          name: http
        - containerPort: 8554
          name: rtsp
        - containerPort: 8555
          name: webrtc-tcp
          protocol: TCP
        - containerPort: 8555
          name: webrtc-udp
          protocol: UDP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media/frigate
        - name: models
          mountPath: /models
          readOnly: true
        - name: frigate-config
          mountPath: /config/config.yml
          subPath: config.yml
          readOnly: true
        - name: dri
          mountPath: /dev/dri
        - name: shm
          mountPath: /dev/shm
        resources:
          requests:
            memory: "2Gi"
            cpu: "1000m"
            gpu.intel.com/i915: "1"
          limits:
            memory: "4Gi"
            cpu: "2000m"
            gpu.intel.com/i915: "1"
        securityContext:
          privileged: true
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: frigate-config
      - name: media
        nfs:
          server: 10.2.10.100
          path: /mnt/NAS-WIL/Media/frigate
          readOnly: false
      - name: models
        nfs:
          server: 10.2.10.100
          path: /mnt/NAS-WIL/Media/frigate/models
          readOnly: true
      - name: frigate-config
        configMap:
          name: frigate-config
      - name: dri
        hostPath:
          path: /dev/dri
          type: Directory
      - name: shm
        emptyDir:
          medium: Memory
          sizeLimit: 1Gi
