kubernetes/apps/prod/frigate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frigate
  namespace: frigate
spec:
  selector:
    app: frigate
  ports:
  - name: http
    port: 80
    targetPort: 5000
    protocol: TCP
  - name: rtsp
    port: 8554
    targetPort: 8554
    protocol: TCP
  - name: webrtc-tcp
    port: 8555
    targetPort: 8555
    protocol: TCP
  - name: webrtc-udp
    port: 8555
    targetPort: 8555
    protocol: UDP
  type: ClusterIP
